--- a/src/app/task/task-dialog/task-dialog.component.html
+++ b/src/app/task/task-dialog/task-dialog.component.html
@@ -1,15 +1,16 @@
 <mat-form-field>
   <mat-label>Title</mat-label>
-  <input matInput cdkFocusInitial [(ngModel)]="data.task.title" />
+  <input matInput cdkFocusInitial [(ngModel)]="data.task.title" required/>
+  <mat-error>Title cannot be empty</mat-error>
 </mat-form-field>
 
-<mat-form-field>
+<mat-form-field class="mt-2">
   <mat-label>Description</mat-label>
   <textarea matInput [(ngModel)]="data.task.description"></textarea>
 </mat-form-field>
 
 <div mat-dialog-actions>
-  <button mat-button [mat-dialog-close]="{ task: data.task }">OK</button>
+  <button mat-button (click)="onSave()">OK</button>
   <button mat-button (click)="cancel()">Cancel</button>
   <button *ngIf="data.enableDelete" mat-fab [mat-dialog-close]="{ task: data.task, delete: true }" color="primary"
     aria-label="Delete">
