--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,37 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+:root {
+  --navbar-height--: 80px;
+  --footer-height--: 60px;
+  --primary-color--: #3f51b5
+}
+
+.my-navbar {
+  height: var(--navbar-height--) !important;
+}
+
+.login-container {
+  // 100vh - height of navbar - margin - footer height
+  height: calc(100vh - var(--navbar-height--) - 20px - var(--footer-height--));
+}
+
+.kanban-list {
+  background-color: #F0F0F0;
+  border: solid 1px #ccc;
+  min-height: 60px;
+  border-radius: 4px;
+  // 100vh - height of navbar - margin - footer height -lineheight of button - lineheight of list text
+  max-height: calc(100vh - var(--navbar-height--) - 20px - var(--footer-height--) - 36px - 100px);
+  overflow-y: scroll;
+}
+
+.footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: var(--footer-height--);
+  background-color: var(--primary-color--);
+  color: #ffffff;
+}
